k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  banking
  labels:
    app:  banking
spec:
  selector:
    matchLabels:
      app: banking
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  banking
    spec:
      containers:
      - image:  quangno129/quang
        name:  banking
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  8080
          name:  banking
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name:  svc-bank
spec:
  selector:
    app:  banking
  type:  ClusterIP
  ports:
  - name: port
    port:  8080
    targetPort:  8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  labels:
    app: banking
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api-gateway-dashboard-testing.medpro.com.vn
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: svc-bank
            port:
              number: 8080
  tls:
    - hosts:
      - api-gateway-dashboard-testing.medpro.com.vn
      secretName: medpro
