k8s/deploymenttest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  #   deployment.kubernetes.io/revision: '1'
  name:  banking
  labels:
    app:  banking
spec:  # thiết lập các POD do deploy quản lý
  replicas: 10
  selector:
    matchLabels:
      app: banking
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 3
    type: RollingUpdate
  template: #container
    metadata:
      labels:
        app:  banking
    spec:
      containers:
      - image:  quangno129/quang
        name:  banking
        resources:
          requests:
            cpu: "10m"
            memory: "10M"
        ports:
        - containerPort:  8080
          name:  banking
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name:  svc-bank  #ten service
spec:
  selector:
    app:  banking
  type:  ClusterIP
  ports:
  - name: port
    port:  8080
    targetPort:  8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  # labels:
  #   app: banking
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api-gateway-dashboard-testing.medpro.com.vn    #ten mien truy cap
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: svc-bank    # connect xuong svc-bank
            port:
              number: 8080
  tls:
    - hosts:
      - api-gateway-dashboard-testing.medpro.com.vn
      secretName: medpro
